<resources>
    <string name="app_name">Chameleon</string>
    <string name="content">Content</string>
    <string name="loading">Loading</string>
    <string name="error">Error</string>
    <string name="empty">Empty</string>
    <string name="sub_empty">Where is chameleon?</string>
    <string name="long_empty">Empty Long Long Long Long Long Long Long</string>
    <string name="long_sub_empty">Where is chameleon? Where is chameleon? Where is chameleon? Where is chameleon? Where is chameleon?</string>
    <string name="sub_error">The chameleon is dead.</string>
    <string name="display">Display State</string>
    <string name="bt_empty">+Add Chameleon</string>
    <string name="bt_error">Retry</string>
    <string name="list_title">Chameleon List</string>
</resources>
